Ozhaev Zaynudin Sharik3.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:40:49: error: invalid conversion from 'int*' to 'int' [-fpermissive]
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:6:6: error:   initializing argument 3 of 'void PhysicsBall(int*, int*, int, int, int, int)' [-fpermissive]
 void PhysicsBall(int* x, int* y, int vx, int vy, int dt, int r);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:40:49: error: invalid conversion from 'int*' to 'int' [-fpermissive]
         PhysicsBall(&x1, &y1, &vx1, &vy1, dt, r1);
                                                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:6:6: error:   initializing argument 4 of 'void PhysicsBall(int*, int*, int, int, int, int)' [-fpermissive]
 void PhysicsBall(int* x, int* y, int vx, int vy, int dt, int r);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:41:49: error: invalid conversion from 'int*' to 'int' [-fpermissive]
         PhysicsBall(&x2, &y2, &vx2, &vy2, dt, r2);
                                                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:6:6: error:   initializing argument 3 of 'void PhysicsBall(int*, int*, int, int, int, int)' [-fpermissive]
 void PhysicsBall(int* x, int* y, int vx, int vy, int dt, int r);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:41:49: error: invalid conversion from 'int*' to 'int' [-fpermissive]
         PhysicsBall(&x2, &y2, &vx2, &vy2, dt, r2);
                                                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:6:6: error:   initializing argument 4 of 'void PhysicsBall(int*, int*, int, int, int, int)' [-fpermissive]
 void PhysicsBall(int* x, int* y, int vx, int vy, int dt, int r);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:42:49: error: invalid conversion from 'int*' to 'int' [-fpermissive]
         PhysicsBall(&x3, &y3, &vx3, &vy3, dt, r3);
                                                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:6:6: error:   initializing argument 3 of 'void PhysicsBall(int*, int*, int, int, int, int)' [-fpermissive]
 void PhysicsBall(int* x, int* y, int vx, int vy, int dt, int r);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:42:49: error: invalid conversion from 'int*' to 'int' [-fpermissive]
         PhysicsBall(&x3, &y3, &vx3, &vy3, dt, r3);
                                                 ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:6:6: error:   initializing argument 4 of 'void PhysicsBall(int*, int*, int, int, int, int)' [-fpermissive]
 void PhysicsBall(int* x, int* y, int vx, int vy, int dt, int r);
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp: In function 'void PhysicsBall(int*, int*, int*, int*, int, int)':
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:85:6: warning: no previous declaration for 'void PhysicsBall(int*, int*, int*, int*, int, int)' [-Wmissing-declarations]
 void PhysicsBall(int* x, int* y, int* vx, int* vy, int dt, int r)
      ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:87:16: error: invalid operands of types 'int*' and 'int' to binary 'operator*'
     *x += vx * dt;
                ^
C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp:88:16: error: invalid operands of types 'int*' and 'int' to binary 'operator*'
     *y += vy * dt;
                ^
---------------------------------------------------------------------------------------------
[31.05.2021  2:11:12,99 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\proekt2> g++.exe "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.cpp" -o "C:\Users\zainu\Desktop\курс\proekt2\Ozhaev Zaynudin Sharik3.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
